--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Loja Online</title>
+    <title>Tropicália</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../CSS/style.css">
 </head>
@@ -21,53 +21,131 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Início</a>
+                        <a class="nav-link" href="#">Sobre</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Produtos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Contato</a>
+                        <a class="nav-link" href="#contato">Contato</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    
-<div class="banner"> <img src="../IMG/banner.png" alt=""></div>
+    <!-- Carousel -->
+    <div class="banners">
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="../IMG/modaMasculina.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="../IMG/inverno.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="../IMG/namorados.png" class="d-block w-100" alt="...">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </div>
 
-    <!-- Produtos -->
-    <div class="container mt-5">
-        <h2 class="text-center mb-4" style="color: #aa7448;">Nossos Produtos</h2>
-        <div class="row row-cols-1 row-cols-md-3 g-4">
+    <div class="container mt-4">
+        <!-- Primeira linha de cards -->
+        <div class="row mb-4">
             <div class="col">
-                <div class="card h-100">
-                    <img src="https://via.placeholder.com/300x200?text=Produto+1" class="card-img-top" alt="Produto 1">
-                    <div class="card-body">
-                        <h5 class="card-title">Produto 1</h5>
-                        <p class="card-text">Descrição do Produto 1.</p>
-                        <a href="#" class="btn btn-primary">Comprar</a>
+                <h2 class="text-center mb-4">Nossas camisetas</h2>
+                <div class="row">
+                    <!-- Card 1 -->
+                    <div class="col-md-4">
+                        <div class="card mb-4">
+                            <img src="../IMG/produto1.jpg" class="card-img-top" alt="Produto 1">
+                            <div class="card-body">
+                                <h5 class="card-title">Camiseta Oversized Hustling</h5>
+                                <span>R$89,99</span>
+                                <a href="#" class="btn btn-primary">Comprar</a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Card 2 -->
+                    <div class="col-md-4">
+                        <div class="card mb-4">
+                            <img src="../IMG/produto2.jpg" class="card-img-top" alt="Produto 2">
+                            <div class="card-body">
+                                <h5 class="card-title">Oversized Stay Hungry Marrom</h5>
+                                <span>R$89,99</span>
+                                <a href="#" class="btn btn-primary">Comprar</a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Card 3 -->
+                    <div class="col-md-4">
+                        <div class="card mb-4">
+                            <img src="../IMG/produto3.jpg" class="card-img-top" alt="Produto 3">
+                            <div class="card-body">
+                                <h5 class="card-title">Camiseta Oversized Preta Thunder God</h5>
+                                <span>R$89,99</span>
+                                <a href="#" class="btn btn-primary">Comprar</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
+        </div>
+
+        <!-- Segunda linha de cards -->
+        <div class="row">
             <div class="col">
-                <div class="card h-100">
-                    <img src="https://via.placeholder.com/300x200?text=Produto+2" class="card-img-top" alt="Produto 2">
-                    <div class="card-body">
-                        <h5 class="card-title">Produto 2</h5>
-                        <p class="card-text">Descrição do Produto 2.</p>
-                        <a href="#" class="btn btn-primary">Comprar</a>
+                <h2 class="text-center mb-4">Nossas calças</h2>
+                <div class="row">
+                    <!-- Card 4 -->
+                    <div class="col-md-4">
+                        <div class="card mb-4">
+                            <img src="../IMG/produto4.jpg" class="card-img-top" alt="Produto 4">
+                            <div class="card-body">
+                                <h5 class="card-title">Calça Baggy Em Jeans Preta</h5>
+                                <span>R$139,99</span>
+                                <a href="#" class="btn btn-primary">Comprar</a>
+                            </div>
+                        </div>
                     </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card h-100">
-                    <img src="https://via.placeholder.com/300x200?text=Produto+3" class="card-img-top" alt="Produto 3">
-                    <div class="card-body">
-                        <h5 class="card-title">Produto 3</h5>
-                        <p class="card-text">Descrição do Produto 3.</p>
-                        <a href="#" class="btn btn-primary">Comprar</a>
+                    <!-- Card 5 -->
+                    <div class="col-md-4">
+                        <div class="card mb-4">
+                            <img src="../IMG/produto5.PNG" class="card-img-top" alt="Produto 5">
+                            <div class="card-body">
+                                <h5 class="card-title">Calça Balão Preta</h5>
+                                <span>R$139,99</span>
+                                <a href="#" class="btn btn-primary">Comprar</a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Card 6 -->
+                    <div class="col-md-4">
+                        <div class="card mb-4">
+                            <img src="../IMG/produto6.jpg" class="card-img-top" alt="Produto 6">
+                            <div class="card-body">
+                                <h5 class="card-title">Calça Parachute Street Cinza</h5>
+                                <span>R$139,99</span>
+                                <a href="#" class="btn btn-primary">Comprar</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -75,9 +153,36 @@
     </div>
 
     <!-- Footer -->
-    <footer class="footer mt-5 py-3">
+    <footer class="bg-dark text-white py-4">
         <div class="container">
-            <span class="footer-text">© 2024 LojaOnline. Todos os direitos reservados.</span>
+            <div class="row">
+                <div class="col-md-3">
+                    <h5 id="contato">Contatos:</h5>
+                    <ul class="list-unstyled">
+                        <li><a href=""></a>Instagram: </li>
+                        <li><a href=""></a>Whatsapp: </li>
+                        <li><a href=""></a>E-mail: </li>
+                    </ul>
+                </div>
+                <div class="col-md-3">
+                    <h5>Mande aqui seu feedback de nossa página!</h5>
+                    <form>
+                        <div class="input-group mb-3">
+                            <input type="email" class="form-control" placeholder="Feedback"
+                                aria-label="Email address">
+                            <div class="input-group-append">
+                                <button class="btn btn-primary" type="button" id="butao" onclick="feedbackContexto.mostrarResposta()">Enviar</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="col-md-6 text-right">
+                    <p> © Todos os direitos reservados.</p>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-facebook"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                </div>
+            </div>
         </div>
     </footer>
 
