Página de Sobre com responsividade

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -13,7 +13,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
-            <a class="navbar-brand" href="#">Tropicália</a>
+           <img src="../IMG/logoTropicalia.png" alt="" class="logo">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -21,10 +21,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Sobre</a>
+                        <a class="nav-link" href="./sobre.html" id="sobre">Sobre</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#contato">Contato</a>
+                        <a class="nav-link" href="#contatos" id="botaoContato">Contato</a>
                     </li>
                 </ul>
             </div>
@@ -157,11 +157,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3">
-                    <h5 id="contato">Contatos:</h5>
+                    <h5 id="contatos">Contatos:</h5>
                     <ul class="list-unstyled">
-                        <li><a href=""></a>Instagram: </li>
-                        <li><a href=""></a>Whatsapp: </li>
-                        <li><a href=""></a>E-mail: </li>
+                        <li><a href=""></a>Instagram: &nbsp; @tropicalia</li>
+                        <li><a href=""></a>Whatsapp: &nbsp; (11) 4002-8922</li>
+                        <li><a href=""></a>E-mail: &nbsp; tropicalia@gmail.com</li>
                     </ul>
                 </div>
                 <div class="col-md-3">
