--- a/HTML/sobre.html
+++ b/HTML/sobre.html
@@ -21,7 +21,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="./index.html">Menu</a>
+                        <a class="nav-link" href="../index.html">Menu</a>
                     </li>
                 </ul>
             </div>
