--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="./sobre.html" id="sobre">Sobre</a>
+                        <a class="nav-link" href="./HTML/sobre.html" id="sobre">Sobre</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#contatos" id="botaoContato">Contato</a>
