--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tropicália</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="./CSS/style.css">
 </head>
 
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
-           <img src="../IMG/logoTropicalia.png" alt="" class="logo">
+           <img src="./IMG/logoTropicalia.png" alt="" class="logo">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -44,24 +44,24 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="../IMG/modaMasculina.png" class="d-block w-100" alt="...">
+                    <img src="./IMG/modaMasculina.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="../IMG/inverno.png" class="d-block w-100" alt="...">
+                    <img src="./IMG/inverno.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="../IMG/namorados.png" class="d-block w-100" alt="...">
+                    <img src="./IMG/namorados.png" class="d-block w-100" alt="...">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
                 data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
+                <span class="visually-hidden">Próximo</span>
             </button>
             <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
                 data-bs-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
+                <span class="visually-hidden">Anterior</span>
             </button>
         </div>
     </div>
@@ -75,7 +75,7 @@
                     <!-- Card 1 -->
                     <div class="col-md-4">
                         <div class="card mb-4">
-                            <img src="../IMG/produto1.jpg" class="card-img-top" alt="Produto 1">
+                            <img src="./IMG/produto1.jpg" class="card-img-top" alt="Produto 1">
                             <div class="card-body">
                                 <h5 class="card-title">Camiseta Oversized Hustling</h5>
                                 <span>R$89,99</span>
@@ -86,7 +86,7 @@
                     <!-- Card 2 -->
                     <div class="col-md-4">
                         <div class="card mb-4">
-                            <img src="../IMG/produto2.jpg" class="card-img-top" alt="Produto 2">
+                            <img src="./IMG/produto2.jpg" class="card-img-top" alt="Produto 2">
                             <div class="card-body">
                                 <h5 class="card-title">Oversized Stay Hungry Marrom</h5>
                                 <span>R$89,99</span>
@@ -97,7 +97,7 @@
                     <!-- Card 3 -->
                     <div class="col-md-4">
                         <div class="card mb-4">
-                            <img src="../IMG/produto3.jpg" class="card-img-top" alt="Produto 3">
+                            <img src="./IMG/produto3.jpg" class="card-img-top" alt="Produto 3">
                             <div class="card-body">
                                 <h5 class="card-title">Camiseta Oversized Preta Thunder God</h5>
                                 <span>R$89,99</span>
@@ -117,7 +117,7 @@
                     <!-- Card 4 -->
                     <div class="col-md-4">
                         <div class="card mb-4">
-                            <img src="../IMG/produto4.jpg" class="card-img-top" alt="Produto 4">
+                            <img src="./IMG/produto4.jpg" class="card-img-top" alt="Produto 4">
                             <div class="card-body">
                                 <h5 class="card-title">Calça Baggy Em Jeans Preta</h5>
                                 <span>R$139,99</span>
@@ -128,7 +128,7 @@
                     <!-- Card 5 -->
                     <div class="col-md-4">
                         <div class="card mb-4">
-                            <img src="../IMG/produto5.PNG" class="card-img-top" alt="Produto 5">
+                            <img src="./IMG/produto5.PNG" class="card-img-top" alt="Produto 5">
                             <div class="card-body">
                                 <h5 class="card-title">Calça Balão Preta</h5>
                                 <span>R$139,99</span>
@@ -139,7 +139,7 @@
                     <!-- Card 6 -->
                     <div class="col-md-4">
                         <div class="card mb-4">
-                            <img src="../IMG/produto6.jpg" class="card-img-top" alt="Produto 6">
+                            <img src="./IMG/produto6.jpg" class="card-img-top" alt="Produto 6">
                             <div class="card-body">
                                 <h5 class="card-title">Calça Parachute Street Cinza</h5>
                                 <span>R$139,99</span>
@@ -178,9 +178,6 @@
                 </div>
                 <div class="col-md-6 text-right">
                     <p> © Todos os direitos reservados.</p>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fab fa-facebook"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
         </div>
