Correção de redirecionamento

--- a/HTML/sobre.html
+++ b/HTML/sobre.html
@@ -30,7 +30,7 @@
 
         <section>
             <div class="container">
-                <img src="../IMG/logo.PNG" alt="" id="logo">
+                <img src="../IMG/logo.png" alt="" id="logo">
             </div>
         </section>
 
