--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../JS/main.js"></script>
+    <script src="./JS/main.js"></script>
 </body>
 
 </html>
